package DesignPattern.Creational.Builder;

public interface UserDTO {

    String getName();

    String getAddress();

    String getAge();

    
}
